python/uwapi/uw/bots.h

 typedef uint16_t uint16;
 typedef uint32_t uint32;
 typedef uint64_t uint64;
 typedef struct UwIds
 {
  const uint32 * ids;
  uint32 count;
 } UwIds;
 typedef enum UwPriorityEnum
 {
  UwPriorityEnum_Disabled = 0,
  UwPriorityEnum_Normal = 1,
  UwPriorityEnum_High = 2,
 } UwPriorityEnum;
 typedef enum UwForeignPolicyEnum
 {
  UwForeignPolicyEnum_None = 0,
  UwForeignPolicyEnum_Self = 1,
  UwForeignPolicyEnum_Ally = 2,
  UwForeignPolicyEnum_Neutral = 3,
  UwForeignPolicyEnum_Enemy = 4,
 } UwForeignPolicyEnum;
               void uwInitialize(uint32 version);
 typedef void (*UwExceptionCallbackType)(const char *message);
               void uwSetExceptionCallback(UwExceptionCallbackType callback);
 typedef enum UwSeverityEnum
 {
  UwSeverityEnum_Note = 0,
  UwSeverityEnum_Hint = 1,
  UwSeverityEnum_Warning = 2,
  UwSeverityEnum_Info = 3,
  UwSeverityEnum_Error = 4,
  UwSeverityEnum_Critical = 5,
 } UwSeverityEnum;
 typedef struct UwLogCallback
 {
  const char *message;
  const char *component;
  UwSeverityEnum severity;
 } UwLogCallback;
 typedef void (*UwLogCallbackType)(const UwLogCallback *data);
               void uwSetLogCallback(UwLogCallbackType callback);
               void uwLog(UwSeverityEnum severity, const char *message);
 typedef enum UwConnectionStateEnum
 {
  UwConnectionStateEnum_None = 0,
  UwConnectionStateEnum_Connecting = 1,
  UwConnectionStateEnum_Connected = 2,
  UwConnectionStateEnum_Error = 3,
 } UwConnectionStateEnum;
 typedef void (*UwConnectionStateCallbackType)(UwConnectionStateEnum state);
               void uwSetConnectionStateCallback(UwConnectionStateCallbackType callback);
               UwConnectionStateEnum uwConnectionState(void);
               bool uwConnectFindLan(uint64 timeoutMicroseconds);
               void uwConnectDirect(const char *address, uint16 port);
               void uwConnectLobbyId(uint64 lobbyId);
               void uwConnectNewServer(uint32 visibility, const char *name, const char *extraCmdParams);
 typedef enum UwOrderTypeEnum
 {
  UwOrderTypeEnum_None = 0,
  UwOrderTypeEnum_Stop = 1,
  UwOrderTypeEnum_Guard = 2,
  UwOrderTypeEnum_Run = 3,
  UwOrderTypeEnum_Fight = 4,
  UwOrderTypeEnum_Load = 5,
  UwOrderTypeEnum_Unload = 6,
  UwOrderTypeEnum_SelfDestruct = 7,
 } UwOrderTypeEnum;
 typedef enum UwOrderPriorityFlags
 {
  UwOrderPriorityFlags_None = 0,
  UwOrderPriorityFlags_Assistant = 1 << 0,
  UwOrderPriorityFlags_User = 1 << 1,
  UwOrderPriorityFlags_Enqueue = 1 << 2,
  UwOrderPriorityFlags_Repeat = 1 << 3,
 } UwOrderPriorityFlags;
 typedef struct UwOrder
 {
  uint32 entity;
  uint32 position;
  UwOrderTypeEnum order;
  UwOrderPriorityFlags priority;
 } UwOrder;
               void uwOrder(uint32 unit, const UwOrder *data);
 typedef struct UwOrders
 {
  const UwOrder * orders;
  uint32 count;
 } UwOrders;
               void uwOrders(uint32 unit, UwOrders *data);
               void uwCommandPlaceConstruction(uint32 constructionProto, uint32 position, float yaw, uint32 recipeProto, UwPriorityEnum priority);
               void uwCommandSetRecipe(uint32 unitOrConstructionId, uint32 recipeProto);
               void uwCommandLoad(uint32 unitId, uint32 resourceProto);
               void uwCommandUnload(uint32 unitId);
               void uwCommandMove(uint32 unitId, uint32 position, float yaw);
               void uwCommandAim(uint32 unitId, uint32 targetId);
               void uwCommandRenounceControl(uint32 entityId);
               void uwCommandSelfDestruct(uint32 entityId);
               void uwSetPlayerName(const char *name);
               void uwSetPlayerColor(float r, float g, float b);
 typedef struct UwMyPlayer
 {
  uint32 playerEntityId;
  uint32 forceEntityId;
  bool primaryController;
  bool admin;
 } UwMyPlayer;
               bool uwMyPlayer(UwMyPlayer *data);
 typedef enum UwGameStateEnum
 {
  UwGameStateEnum_None = 0,
  UwGameStateEnum_Session = 1,
  UwGameStateEnum_Preparation = 2,
  UwGameStateEnum_Game = 3,
  UwGameStateEnum_Finish = 4,
 } UwGameStateEnum;
 typedef void (*UwGameStateCallbackType)(UwGameStateEnum state);
               void uwSetGameStateCallback(UwGameStateCallbackType callback);
               UwGameStateEnum uwGameState(void);
 typedef void (*UwUpdateCallbackType)(uint32 tick, bool stepping);
               void uwSetUpdateCallback(UwUpdateCallbackType callback);
 typedef struct UwShootingUnit
 {
  uint32 position;
  uint32 force;
  uint32 prototype;
  uint32 id;
 } UwShootingUnit;
 typedef struct UwShootingData
 {
  UwShootingUnit shooter;
  UwShootingUnit target;
 } UwShootingData;
 typedef struct UwShootingArray
 {
  const UwShootingData * data;
  uint32 count;
 } UwShootingArray;
 typedef void (*UwShootingCallbackType)(const UwShootingArray *data);
               void uwSetShootingCallback(UwShootingCallbackType callback);
               bool uwTestConstructionPlacement(uint32 constructionProto, uint32 position, uint32 recipeProto);
               uint32 uwFindConstructionPlacement(uint32 constructionProto, uint32 position, uint32 recipeProto);
 typedef UwEntity *UwEntityPtr;
               void uwModifiedEntities(UwIds *data);
 typedef enum UwForceStateFlags
 {
  UwForceStateFlags_None = 0,
  UwForceStateFlags_Winner = 1 << 0,
  UwForceStateFlags_Defeated = 1 << 1,
  UwForceStateFlags_Disconnected = 1 << 2,
 } UwForceStateFlags;
 typedef struct UwForceComponent
 {
  float color[3];
  uint64 score;
  uint32 killCount;
  uint32 lossCount;
  uint32 finishTimestamp;
  uint32 intendedTeam;
  uint32 intendedRace;
  UwForceStateFlags state;
 } UwForceComponent;
               bool uwFetchForceComponent(UwEntityPtr entity, UwForceComponent *data);
 typedef struct UwForceDetailsComponent
 {
  uint64 killValue;
  uint64 lossValue;
  uint32 startingPosition;
  uint32 race;
 } UwForceDetailsComponent;
               bool uwFetchForceDetailsComponent(UwEntityPtr entity, UwForceDetailsComponent *data);
 typedef struct UwForeignPolicyComponent
 {
  uint32 forces[2];
  UwForeignPolicyEnum policy;
 } UwForeignPolicyComponent;
               bool uwFetchForeignPolicyComponent(UwEntityPtr entity, UwForeignPolicyComponent *data);
 typedef struct UwDiplomacyProposalComponent
 {
  uint32 offeror;
  uint32 offeree;
  UwForeignPolicyEnum proposal;
 } UwDiplomacyProposalComponent;
               bool uwFetchDiplomacyProposalComponent(UwEntityPtr entity, UwDiplomacyProposalComponent *data);