c/uwapi-c/uwapi/game.h

	UNNATURAL_API void uwSetAssistLogistics(bool enabled);
	UNNATURAL_API void uwSetAssistFighting(bool enabled);